[gd_scene load_steps=2 format=3 uid="uid://d1rrxo4psh30t"]

[ext_resource type="Script" uid="uid://cr7xt5jwww560" path="res://MainScene.gd" id="1_x4av3"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_x4av3")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.2, 0.2)

[node name="ButtonsContainer" type="VBoxContainer" parent="Camera2D"]
offset_left = 3.0
offset_top = 3.0
offset_right = 367.0
offset_bottom = 194.0

[node name="ForGrid" type="Button" parent="Camera2D/ButtonsContainer"]
layout_mode = 2
text = "Boton para grilla simple

"

[node name="ForEditor" type="Button" parent="Camera2D/ButtonsContainer"]
layout_mode = 2
text = "Editor de polygonos

"

[connection signal="pressed" from="Camera2D/ButtonsContainer/ForGrid" to="." method="_on_for_grid_pressed"]
[connection signal="pressed" from="Camera2D/ButtonsContainer/ForEditor" to="." method="_on_for_editor_pressed"]
